--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.3.30",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.435.0",
     "next": "14.0.3",
