--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.1",
     "recharts": "^2.12.7",
+    "search-params": "^4.0.1",
     "sonner": "^1.5.0",
     "stripe": "^16.8.0",
     "tailwind-merge": "^2.5.2",
